# tonav-supplementary-files

./: .gitmodules  DIPLOMKA.txt
camera_calibration/: CMakeLists.txt  dataset.xml  dataset_config.xml  make_calibration.py  out_camera_data.xml
datasets/00_calibration/: camera.csv  inertial_device.csv  location.csv
datasets/01_mrkvickova_long/: camera.csv  inertial_device.csv  location.csv
datasets/02_mrkvickova_short/: camera.csv  inertial_device.csv  location.csv
datasets/03_mrkvickova_gravity_overburn/: camera.csv  inertial_device.csv  location.csv
datasets/04_mrkvickova_gravity/: camera.csv  inertial_device.csv  location.csv
datasets/99_other_files/: calibration.yaml
other/20160229_TrackMe_for_Tomas_Krejci/TrackMe/: AndroidEvent.hpp  ArrayMatrix.hpp  AxesEvent.hpp  (+11 more)
other/20160229_TrackMe_for_Tomas_Krejci/TrackMe-GUI/: README.txt  TrackMe-GUI.pro  config.cpp  config.h  eventfeeder.cpp  eventfeeder.h  main.cpp  mainwindow.cpp  mainwindow.h  recorder.cpp  recorder.h  utilities.h
other/20160229_TrackMe_for_Tomas_Krejci/TrackMe-Sensors/: .project  AndroidManifest.xml
tex/: 00_introduction.tex  01_related_works.tex  02_my_approach.tex  03_experimental_results.tex  50_notes.tex  91_bibliography.tex  Makefile  bibliography.bib  example.tex  thesis.tex
tex/.texpadtmp/: 00_introduction.aux  01_related_works.aux  02_my_approach.aux  03_experimental_results.aux  50_notes.aux  90_conclusion.aux  91_bibliography.aux  Notes.aux  bibliography.aux  chap1.aux  chap2.aux  epilog.aux  preface.aux  thesis.aux  thesis.bbl  thesis.blg  thesis.out  thesis.tdo  thesis.toc
(+187 files in other folders)
